:heart_eyes::heart_eyes::heart_eyes: Add players models

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -55,41 +55,5 @@ input:-webkit-autofill:active {
 /* Material design */
 
 .MuiInput-underline-19:before {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.27) !important;
-}
-
-/* Calendar */
-
-.rbc-calendar {
-  color: #555 !important;
-}
-
-.rbc-calendar .rbc-event {
-  background-color: $accent-color !important;
-}
-
-.rbc-calendar .rbc-show-more {
-  color: $accent-color !important;
-}
-
-.rbc-calendar [type="button"].rbc-active {
-  border-color: #ccc !important;
-  background-color: #f0f0f0 !important;
-  box-shadow: none !important;
-}
-
-.rbc-calendar span {
-  color: #444 !important;
-}
-
-.rbc-calendar a {
-  color: #777 !important;
-}
-
-.rbc-calendar .rbc-off-range-bg {
-  background-color: #f5f5f5 !important;
-}
-
-.rbc-calendar .rbc-today {
-  background-color: #fffbed !important;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.27);
 }
