--- a/src/styles/drawer.module.scss
+++ b/src/styles/drawer.module.scss
@@ -1,4 +1,5 @@
 @import "util.scss";
+
 .module {
   width: 100%;
   min-height: 100%;
@@ -27,4 +28,18 @@
   color: #fff;
   font-size: 13px;
   text-transform: uppercase;
+}
+
+.module .navItem svg,
+.module .navItem span {
+  color: rgba(255, 255, 255, 0.85);
+}
+
+.module a.active>div {
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+.module .active svg,
+.module .active span {
+  color: #fff;
 }
