--- a/src/components/helpers/Item.module.scss
+++ b/src/components/helpers/Item.module.scss
@@ -16,3 +16,18 @@
   overflow: hidden;
   white-space: nowrap;
 }
+
+.options {
+  float: right;
+  margin-top: -32px;
+  width: 28px;
+  height: 28px;
+  cursor: pointer;
+  @include box-sizing(border-box);
+}
+
+.options svg {
+  width: 100%;
+  height: 100%;
+  fill: #999;
+}
