--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,8 @@ input:-webkit-autofill:active {
 .MuiInput-underline-19:before {
   border-bottom: 1px solid rgba(0, 0, 0, 0.27);
 }
+
+.MuiMenu-list li{
+  color: #444;
+  text-decoration: none;
+}
