--- a/src/util/themes/basic/Home.scss
+++ b/src/util/themes/basic/Home.scss
@@ -5,33 +5,41 @@
   $side-width: 215px;
   $top-height: 45px;
 
-  .drawer{
+  .module {
     position: fixed;
     width: 100%;
     height: 100%;
+    @include box-sizing(border-box);
   }
 
-  .sidenav {
+  .drawer {
     position: fixed;
     width: $side-width;
     height: 100%;
+    z-index: 10;
+    @include box-sizing(border-box);
+  }
+
+  .sidenav {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     background: $primary-color;
     overflow: auto;
-    @include box-sizing(border-box);
     border-right: 1px solid #e0e0e0;
+    @include box-sizing(border-box);
   }
 
   .container {
     position: fixed;
     width: 100%;
     height: 100%;
-    margin-left: $side-width;
-    background: #fff;
+    padding-left: $side-width;
     @include box-sizing(border-box);
   }
 
   .topnav {
-    position: fixed;
+    position: relative;
     width: 100%;
     height: $top-height;
     overflow: auto;
@@ -41,10 +49,9 @@
   }
 
   .content {
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 100%;
-    margin-top: $top-height;
     overflow: auto;
     @include box-sizing(border-box);
   }
