--- a/src/util/themes/basic/details/Options.scss
+++ b/src/util/themes/basic/details/Options.scss
@@ -2,17 +2,39 @@
 
 @mixin theme {
 
+  .back {
+    display: block;
+    height: 28px;
+    width: 28px;
+    padding: 2px;
+    cursor: pointer;
+    @include box-sizing(border-box);
+  }
+
+  .back svg {
+    width: 100%;
+    height: 100%;
+    fill: #999;
+  }
+
   .options {
+    position: relative;
+    margin-top: -28px;
     float: right;
   }
 
   .edit {
     border: 1px solid $action-color;
     color: $action-color;
-    padding: 4px 11px;
+    padding: 3px 11px;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
     @include border-radius(5px)
+  }
+
+  .edit:hover {
+    color: #fff;
+    background: $action-color;
   }
 }
