--- a/src/util/themes/basic/list/Options.scss
+++ b/src/util/themes/basic/list/Options.scss
@@ -7,10 +7,14 @@
   .create {
     border: 1px solid $action-color;
     color: $action-color;
-    padding: 4px 11px;
+    padding: 3px 11px;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
     @include border-radius(5px)
+  }
+  .create:hover{
+    color: #fff;
+    background: $action-color;
   }
 }
