:dizzy::dizzy: Add dynamic rest support

--- a/src/components/teams/Details.module.scss
+++ b/src/components/teams/Details.module.scss
@@ -9,6 +9,8 @@ __Seed builder__v1.0
     .descriptionTxt {}
     .marketValueLbl {}
     .marketValueTxt {}
+    .rivalLbl {}
+    .rivalTxt {}
     .identityDocsLbl {}
     .identityDocsTxt {}
     .playersLbl {}
