--- a/src/components/teams/Form.module.scss
+++ b/src/components/teams/Form.module.scss
@@ -10,6 +10,8 @@ __Seed builder__v1.0
     .descriptionTxa
     .marketValueLbl
     .marketValueTxt
+    .rivalLbl
+    .rivalOps
 */
 
 /* Default theme */
