--- a/src/components/teams/nav/View.module.scss
+++ b/src/components/teams/nav/View.module.scss
@@ -1,11 +1,9 @@
 /*
 __Seed builder__v1.0
-  AUTO_GENERATED (Read only)
-  Modify via builder
 */
 
 @import 'src/seed/themes/base';
-@import 'src/seed/themes/basic/home';
+@import 'src/seed/themes/basic/nav/view';
 @include theme();
 
 .module {
@@ -13,8 +11,7 @@ __Seed builder__v1.0
   height: 100%;
 }
 
-.drawer {}
-.sidenav {}
 .container {}
-.topnav {}
-.content {}
+.list {}
+.details {}
+
