--- a/src/components/teams/options/Details.module.scss
+++ b/src/components/teams/options/Details.module.scss
@@ -3,7 +3,7 @@ __Seed builder__v1.0
 */
 
 @import 'src/seed/themes/base';
-@import 'src/seed/themes/basic/nav/view';
+@import 'src/seed/themes/basic/options/details';
 @include theme();
 
 .module {
@@ -11,6 +11,6 @@ __Seed builder__v1.0
   height: 100%;
 }
 
-.container {}
-.list {}
-.details {}
+.options {}
+.options .btn{}
+.edit {}
