--- a/src/components/nav/Topnav.module.scss
+++ b/src/components/nav/Topnav.module.scss
@@ -1,12 +1,14 @@
 /*
 __Seed builder__v1.0
-  AUTO_GENERATED (Read only)
-  Modify via builder
 */
 
 @import 'src/seed/themes/base';
+@import 'src/seed/themes/basic/nav/topnav';
+@include theme();
 
 .module {
   width: 100%;
   height: 100%;
 }
+
+.menu {}
