--- a/src/components/teams/List.module.scss
+++ b/src/components/teams/List.module.scss
@@ -3,7 +3,7 @@ __Seed builder__v1.0
 */
 
 @import 'src/seed/themes/base';
-@import 'src/seed/themes/basic/nav/view';
+@import 'src/seed/themes/basic/list';
 @include theme();
 
 .module {
@@ -11,6 +11,6 @@ __Seed builder__v1.0
   height: 100%;
 }
 
-.container {}
-.list {}
-.details {}
+.item {}
+.item:hover,
+.item.active {} 
