--- a/src/components/debug/Exports.module.scss
+++ b/src/components/debug/Exports.module.scss
@@ -3,15 +3,13 @@ __Seed builder__v1.0
 */
 
 @import 'src/seed/themes/base';
-@import 'src/seed/themes/basic/nav/view';
-@include theme();
 
 .module {
   width: 100%;
   height: 100%;
 }
 
-.container {}
-.list {}
-.details {}
-
+.container{
+  width: 100%;
+  height: 100%;
+}
