--- a/src/seed/themes/basic/options/details.scss
+++ b/src/seed/themes/basic/options/details.scss
@@ -24,6 +24,7 @@
   }
 
   .options .btn {
+    display: inline-block;
     border: 1px solid $action-color;
     color: $action-color;
     padding: 3px 11px;
@@ -31,6 +32,7 @@
     text-transform: uppercase;
     font-size: 14px;
     font-weight: bold;
+    text-decoration: none;
     @include border-radius(5px)
   }
 
