--- a/src/components/templates/stats/scores/Panel.module.scss
+++ b/src/components/templates/stats/scores/Panel.module.scss
@@ -15,6 +15,10 @@ __Seed builder__v1.0
 .list .options {}
 .list .content {}
 
+.table {}
+.table .options {}
+.table .content {}
+
 .details {}
 .details .card {}
 .details .options {}
