:two_hearts: Add multiselect support

--- a/src/seed/themes/basic/form.scss
+++ b/src/seed/themes/basic/form.scss
@@ -67,6 +67,13 @@
     border: 1px solid #d0d0d0;
   }
 
+  .mul {
+    border: 1px solid #e0e0e0;
+    padding: 8px 16px;
+    height: 120px;
+    overflow: auto;
+  }
+
   .error {
     width: 100%;
     margin-top: 5px;
