--- a/src/seed/components/helpers/Modal.module.scss
+++ b/src/seed/components/helpers/Modal.module.scss
@@ -22,11 +22,10 @@ $header-height: 65px;
 .module .close {
   position: absolute;
   color: rgba(255, 255, 255, 0.6);
-  margin-top: -37px;
-  margin-left: $container-width - 30px;
-}
-
-.module .close svg {
-  width: 21px;
-  height: 21px;
+  width: 35px;
+  height: 35px;
+  margin-top: -24px;
+  border: none;
+  background: rgba(255, 255, 255, 0.3);
+  @include border-radius(50%);
 }
