--- a/src/examples/auth/Login.module.scss
+++ b/src/examples/auth/Login.module.scss
@@ -13,7 +13,7 @@ __Seed builder__v1.0
     position: fixed;
     width: 100%;
     height: 100%;
-    background: $primary-color;
+    background-color: $primary-color;
   }
 
 .container {
