--- a/src/seed/components/helpers/Modal.module.scss
+++ b/src/seed/components/helpers/Modal.module.scss
@@ -25,6 +25,7 @@ $header-height: 65px;
   width: 35px;
   height: 35px;
   margin-top: -24px;
+  margin-left: $container-width - 24px;
   border: none;
   background: rgba(255, 255, 255, 0.3);
   @include border-radius(50%);
