--- a/src/seed/util/_mixins.scss
+++ b/src/seed/util/_mixins.scss
@@ -1,3 +1,8 @@
+/*
+__Seed builder__v0.2.0
+  (Read_only) Builder helper
+*/
+
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
