--- a/src/seed/components/helpers/Modal.module.scss
+++ b/src/seed/components/helpers/Modal.module.scss
@@ -8,8 +8,8 @@ __Seed builder__v0.2.0
 $container-width:500px;
 $container-height:550px;
 $header-height: 65px;
-.module {
-}
+
+.module {}
 
 .module .container {
   position: relative;
