--- a/src/seed/helpers/styles/MultiField.module.scss
+++ b/src/seed/helpers/styles/MultiField.module.scss
@@ -1,6 +1,6 @@
 /*
-__Seed builder__v0.2.0
-  (Read_only) Builder helper
+__Seed builder__
+  (Read_only) Component helper
 */
 
 @import "src/resources/base";
