--- a/src/seed/helpers/styles/MultiField.module.scss
+++ b/src/seed/helpers/styles/MultiField.module.scss
@@ -3,7 +3,7 @@ __Seed builder__
   (Read_only) Component helper
 */
 
-@import "src/resources/base";
+@import "src/styles/base";
 
 .module {
   width: 100%;
