--- a/src/styles/src/App.scss
+++ b/src/styles/src/App.scss
@@ -5,3 +5,75 @@
   width: 100%;
   height: 100%;
 }
+
+.btn-accent {
+  border-color: #f0b000;
+  background: #f0b000;
+  color: #fff;
+
+  &:hover {
+    background: #e0a000;
+    color: #fff;
+  }
+}
+
+.btn-lighter {
+  border-color: #ccc;
+  background: "transparent";
+  color: #707070;
+
+  &:hover {
+    background: #f5f5f5;
+  }
+
+  &.selected {
+    border-color: #f0b000;
+    background: #f0b000;
+    color: #fff;
+
+    &:hover {
+      background: #eaa500;
+    }
+  }
+}
+
+.btn-grey {
+  border: 0;
+  background: #999;
+  color: #fff;
+
+  &:hover {
+    background: #777;
+    color: #fff;
+  }
+
+  &.selected {
+    border-color: #f0b000;
+    background: #f0b000;
+    color: #fff;
+
+    &:hover {
+      background: #eaa500;
+      color: #fff;
+    }
+  }
+}
+
+.scrollbar-narrow::-webkit-scrollbar {
+  width: 9px;
+}
+
+.scrollbar-narrow::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.scrollbar-narrow::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 10px;
+  border: 0px solid transparent;
+  background-clip: content-box;
+}
+
+.scrollbar-narrow::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
